# CrewAyush

./: README.md
ayush/: README.md  pyproject.toml
ayush/output/: decide.md  oppose.md  propose.md
ayush/src/ayush/: crew.py  main.py
ayush/src/ayush/config/: agents.yaml
