[project]
name = "ayush"
version = "0.1.0"
description = "ayush using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
ayush = "ayush.main:run"
run_crew = "ayush.main:run"
train = "ayush.main:train"
replay = "ayush.main:replay"
test = "ayush.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
